--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,4 +9,14 @@
       </view>
     </scroll-view>
   </view>
+  <!--轮播图-->
+  <view class="swiper">
+    <swiper autoplay indicator-dots circular>
+      <swiper-item wx:for="{{swiperList}}" wx:key="{{index}}">
+        <navigator>
+          <image mode="widthFix" src="{{item.imgSrc}}"></image>
+        </navigator>
+      </swiper-item>
+    </swiper>
+  </view>
 </view>
