--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,3 +1,6 @@
+page{
+  padding: 0 10rpx;
+}
 /*首页导航*/
 .nav{
   white-space: nowrap;
@@ -13,3 +16,20 @@
 .nav_item.active{
   border-bottom: 5rpx solid red;
 }
+/*轮播图*/
+.swiper{
+  margin-top: 10rpx;
+}
+.swiper swiper{
+  width: 100%;
+  height: 230rpx;
+}
+.swiper navigator{
+  width: 100%;
+  height: 100%;
+}
+.swiper image{
+  width: 100%;
+  height: 100%;
+}
+
