--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -32,4 +32,54 @@ page{
   width: 100%;
   height: 100%;
 }
+/*视频列表*/
+.video{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5rpx;
+  justify-content: space-between;
+}
+.video_item{
+  width: 49%;
+}
+.video_image{
+  width: 100%;
+  position: relative;
+}
+.video_image image{
+  width: 100%;
+  border-radius: 14rpx;
+}
+.video_image .video_info{
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 15rpx;
+  font-size: 24rpx;
+  color: #fff;
+  display: flex;
+  justify-content: space-around;
+}
+.video_item .video_desc{
+  font-size: 26rpx;
+  color: rgb(138, 128, 128);
+  padding: 0 20rpx;
+  
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  -webkit-line-clamp:2;
+  -webkit-box-orient: vertical;
+
+}
+/* .video_item .video_image{
+  width: 100%;
+  height: 80%;
+}
+.video_item .video_image image{
+  width: 100%;
+  height: 100%;
+} */
 
