--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -21,7 +21,7 @@
   </view>
   <!--视频列表-->
   <view class="video">
-    <navigator class="video_item" wx:for="{{videosList}}" wx:key="{{index}}">
+    <navigator url="../detail/detail?id={{item.id}}" class="video_item" wx:for="{{videosList}}" wx:key="{{index}}">
       <view class="video_image">
         <image mode="widthFix" src="{{item.imgSrc}}"></image>
         <view class="video_info">
